--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="name meaning, name numerology, consciousness name, spiritual name meaning, biblical names, 144000 name, divine purpose, name calculator">
     <meta name="author" content="Seven Cubed Seven Labs LLC">
     <meta name="robots" content="index, follow">
+    <meta name="google-site-verification" content="mbkyKk2X3leSiWPyGwIfpB9NFyV77xh5LduxGmf233M" />
     <link rel="canonical" href="https://2401.name/">
     
     <!-- Open Graph -->
